--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         </button>
     </div>
 
-    <script src="mapanimation.js"></script>
+    <script src="./mapanimation.js"></script>
 
 </body>
 
